# peachy_hehe

./: MANIFEST.in  Makefile  VD_games  main.py  pyproject.toml  pyproject.toml.bak  setup.py  yes
games_project_yuzhakova/VD_games/scripts/: VD_even.py  VD_games.py
peachy_hehe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
